--- a/projects/core/src/internal/base/base.element.scss
+++ b/projects/core/src/internal/base/base.element.scss
@@ -60,6 +60,7 @@ slot {
 
 // https://developers.google.com/web/fundamentals/web-components/best-practices#add-a-:host-display-style-that-respects-the-hidden-attribute
 // we need the check against hidden='false' here because React is pushing string through instead of adding/removing the boolean attribute
+// https://github.com/lit/lit/issues/3053
 :host([hidden]),
 [hidden] {
   display: none !important;
@@ -76,6 +77,13 @@ slot {
   // safari https://www.tpgi.com/the-current-state-of-modal-dialog-accessibility/
   display: block !important;
   visibility: hidden !important;
+}
+
+[role='dialog'][hidden*='false'],
+[role='dialog'][hidden*='false'] > *,
+:host([role='dialog'][hidden*='false']),
+:host([role='dialog'][hidden*='false']) ::slotted(*) {
+  visibility: visible !important;
 }
 
 // normalize focus styles
